Changelog
=========

- Version 1.2 [download source](static/lightscript-1.2.585.tar.bz2)
    - More operators, larger built-in library
    - Support for fractional numbers, fixed-point on integer-only platforms, and otherwise floats.
    - Changing the this semantics to be more EcmaScript-compliant, better implementation of functions/method-calls
    - Distinction between false, undefined and false
    - Optional stack clearing, yielding better GC costing a bit of runtime performance
    - Optional forced interpreter thread preemption, allowing it to run nicely in multithreaded programs on JVM's with cooperative multitasking
    - Variable number of arguments to functions
    - Generalisation of for-in loops, using LightScriptFunctions as generators, rather than Java Enumerations
    - Added LightScriptObject interface for easy wrapping of Java classes, where it is possible to make changes to the source.
    - Custom getter/setter functions, making it possible to make any kind of Java object behave as an object within LightScript
    - More kinds of string quoting and comments
    - Optimised JAR-size approximately 15KB.
- Version 1.0 - thesis version - [download report](static/2009-Rasmus_Jensen-Design_and_Implementation_of_a_Scripting_Language_for_Mobile_Devices.pdf)
    - Closures, first class functions
    - Objects with prototypical inheritance
    - Parser, compiler, and virtual machine
    - Dynamic type system, static scope
    - Supports loading and execution of source code at run time
    - Subject of the thesis: ``Design and Implementation of a Scripting Language for Mobile Devices''
    - Second iteration, based on earlier prototypes of mobile languages, virtual machines and top-down-operator-precedense parsers
    - Performance similar to SpiderMonkey, Rhino and Kahlua, and much faster than JScheme, Hecl and FScriptME
    - Optimised JAR-size approximately 11KB, and thus smaller code footprint than existing languages

