@@ -1,7 +1,0 @@
-ln -fs ../com . &&
-javac -source 1.2 -classpath .:../external_dependencies/midpapi10.jar:../external_dependencies/cldcapi10.jar Midlet.java com/solsort/lightscript/*.java &&
-jar -cvfm ../examples/in.jar manifest com/solsort/*/*.class *.class main.js js/*.js &&
-cd .. &&
-java -jar external_dependencies/proguard.jar @examples/midlets.pro &&
-mv examples/out.jar mui/mui.jar &&
-java -jar external_dependencies/microemulator.jar mui/mui.jar
